(update) all repo after uts

--- a/121140068_ho1.ipynb
+++ b/121140068_ho1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -97,14 +97,13 @@
    "metadata": {},
    "source": [
     "## Description\n",
-    "You must be wonder, what is this stuff. Let's break it (also try to not make myself forget again).\n",
     "\n",
     "Secara sederhana, `code` ini akan digunakan untuk membuka file audio dan melihat bagaimana properti dari audio tersebut.\n",
     "- `audio_frames` merupakan perintah untuk membaca semua frames dalam satu file tersebut, sehingga kita menggunakan `-1` sebagai argument dari method tersebut. \n",
     "- `sound_data` merupakan sebuah perintah untuk mengambil nilai tersebut dan melakukan koversi menjadi tipe data `int16` (sebuah tipe data yang memiliki rentang $(-\\frac{2^{15}}{2}) sampai (+\\frac{2^{15} - 1}{2})$ yang kita gunakan sebagai `bit-depth`).\n",
     "- `sampling_rates` disini merupakan jumlah sampling rate (merupakan jumlah nilai per detik / frekuensi (biasanya dalam satuan `Hertz (Hz)`)), disini kita menggunakan nilai 44100. \n",
     "\n",
-    "    Kenapa 44100? Karena teorema `Nyquist` yang menyatakan bahwa, karena batas pendengaran manusia terletak pada interval `20` - `20000` Hz, maka untuk menghasilkan sebuah sinyal yang halus pada suara berikut, diperlukan minimal 2 kali minimum frequensi (20000 hz sebagai upper limit pendengaran manusia). Kalian bisa membaca artikel ini untuk info [detailnya](https://www.techtarget.com/whatis/definition/Nyquist-Theorem#:~:text=It%20is%20the%20principle%20to,and%20video%20to%20reduce%20aliasing.) (I don't even know how to word this stuff).\n",
+    "    Kenapa 44100? Karena teorema `Nyquist` yang menyatakan bahwa, karena batas pendengaran manusia terletak pada interval `20` - `20000` Hz, maka untuk menghasilkan sebuah sinyal yang halus pada suara berikut, diperlukan minimal 2 kali minimum frequensi (20000 hz sebagai upper limit pendengaran manusia). Kalian bisa membaca artikel ini untuk info [detailnya](https://www.techtarget.com/whatis/definition/Nyquist-Theorem#:~:text=It%20is%20the%20principle%20to,and%20video%20to%20reduce%20aliasing.) (Koreksi pada point ini jika saya salah dalam analisis).\n",
     "\n",
     "- `n_channels` merupakan angka berapa channel pada audio tersebut, biasanya ada 2 `mono` (single channel) dan `stereo` (dual channel), hal ini berdampak bagaimana nilai audio tersebut disimpan dan dan bagaimana cara kita memprosesnya nanti."
    ]
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +202,7 @@
    "source": [
     "Anda pasti berfikir, apa maskud masing-masing nilai pada grafik satu ini, di satu sisi bernilai positif dan negatif. Sederhannaya, nilai tersebut adalah nilai tekanan di udara yang sudah di konversi list bilangan melalui ADC (Analog to Digital Converter).\n",
     "\n",
-    "Kalian juga pasti berfikir, apa hubungannya tekanan udara dalam proses pemrosesan audio secara digital? Cukup contrast dengan pemrosesan citra, dimana kita menggunakan nilai `uint8` (0 - 255) sebagai nilai untuk warna RGB. Untuk pemrosesan audio sendiri, nilai ini nanti akan digunakan sebagai arus listrik untuk menentukan bagaimana suara tersebut di buat oleh speaker / earphone yang kalian pakai (nilai negatif / positif merupakan nilai tekanan / refaksi pada speaker kalian untuk membuat sebuah suara, I don't even know about this stuff, someone with higher form of intelligence, please help me). \n",
+    "Kalian juga pasti berfikir, apa hubungannya tekanan udara dalam proses pemrosesan audio secara digital? Cukup contrast dengan pemrosesan citra, dimana kita menggunakan nilai `uint8` (0 - 255) sebagai nilai untuk warna RGB. Untuk pemrosesan audio sendiri, nilai ini nanti akan digunakan sebagai arus listrik untuk menentukan bagaimana suara tersebut di buat oleh speaker / earphone yang kalian pakai (nilai negatif / positif merupakan nilai tekanan / refaksi pada speaker kalian untuk membuat sebuah suara). (This is the best explanation that I can come up with)\n",
     "\n",
     "Lalu, amplitudo sendiri merupakan satuan yang menentukan kurang lebih kerasnya suara. Semakin jauh sebuah nilai dari titik `equilibrium` (0) maka suara tersebut akan semakin besar.\n",
     "\n",
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -818,12 +817,12 @@
    "source": [
     "Step 6: Check LUFS \n",
     "\n",
-    "Since the wave is the Compressed and Normalized, sudah saatnya di cek kerasnya suara dengan LUFS, disini kita menggunanan IIR Filtering (Infinite Impulse Response). Hal pertama yang kita lakukan adalah dengan membuat sebuah koefisien filter dan menghitung data audio yang telah di proses"
+    "Karena audio sudah di kompress dan di normalisasi, sudah saatnya di cek kerasnya suara dengan LUFS, disini kita menggunanan IIR Filtering (Infinite Impulse Response). Hal pertama yang kita lakukan adalah dengan membuat sebuah koefisien filter dan menghitung data audio yang telah di proses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
