(update) finish ho2 + starting on the video hands-on

--- a/material/week6/3_working_with_image.ipynb
+++ b/material/week6/3_working_with_image.ipynb
@@ -181,8 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_gambar1 = os.path.join(os.getcwd(), 'data', 'sample-a-img-if4021.jpg')\n",
-    "path_gambar2 = os.path.join(os.getcwd(), 'data', 'sample-b-img-if4021.jpg')\n",
+    "path_gambar1 = os.path.join(os.getcwd(), 'attachment', 'sample-a-img-if4021.jpg')\n",
+    "path_gambar2 = os.path.join(os.getcwd(), 'attachment', 'sample-b-img-if4021.jpg')\n",
     "\n",
     "# mengecek apakah file gambar ada\n",
     "# jika tidak ada, akan tercetak pesan \"File tidak ditemukan: <path>\"\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
     "    for col in range(img1_edit.shape[1]):\n",
     "        \n",
     "        if img1_edit[row, col, 0] < 100:\n",
-    "            img1_edit[row, col, 0] = img1_edit[row, col, 0] + 30"
+    "            img1_edit[row, col, 0] = np.clip(img1_edit[row, col, 0] + 30, 0, 255)\n"
    ]
   },
   {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
     "\n",
     "3. Dengan foto anda sendiri, lakukanlah eksperimen berikut ini\n",
     "    - Naikkan kecerahan (brightnes) pada foto tersebut. Anda tidak boleh menggunakan library `cv2` untuk menaikkan kecerahan. Anda hanya boleh menggunakan operasi matriks. Jelaskan langkah-langkah yang anda lakukan. Tampilkan histogram dari foto tersebut\n",
-    "    - Turunkan saturasi warna pada foto tersebut. Anda tidak boleh menggunakan library `cv2` untuk menurunkan saturasi warna. Anda hanya boleh menggunakan operasi matriks. Jelaskan langkah-langkah yang anda lakukan. Tampilkan histogram dari foto tersebut\n",
+    "    - Turunkan saturasi warna pada foto tersebut. Anda tidak boleh menggunakan library `cv2` untuk menurunkan saturasi warna. Anda hanya boleh menggunakan operasi maturiks. Jelaskan langkah-langkah yang anda lakukan. Tampilkan histogram dari foto tersebut\n",
     "    - Turunkan kontras pada foto tersebut. Anda tidak boleh menggunakan library `cv2` untuk menurunkan kontras. Anda hanya boleh menggunakan operasi matriks. Jelaskan langkah-langkah yang anda lakukan. Tampilkan histogram dari foto tersebut\n",
     "\n",
     "### Ketentuan Penamaan File\n",
@@ -759,7 +759,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310_ifitera",
+   "display_name": "py310_multimedia",
    "language": "python",
    "name": "python3"
   },
