(update): finish ho_3 once and for all

--- a/material/week9/4_video_processing.ipynb
+++ b/material/week9/4_video_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,23 +550,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waktu yang diperlukan: 0:01:36.628192\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m### PROSES SETIAP FRAME DISINI ###\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m faces \u001b[38;5;241m=\u001b[39m \u001b[43mdetector\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, face \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(faces): \u001b[38;5;66;03m# untuk setiap wajah yang terdeteksi (bisa saja lebih dari satu)\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     x, y, w, h \u001b[38;5;241m=\u001b[39m face\u001b[38;5;241m.\u001b[39mleft(), face\u001b[38;5;241m.\u001b[39mtop(), face\u001b[38;5;241m.\u001b[39mwidth(), face\u001b[38;5;241m.\u001b[39mheight()\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "VID_PATH = os.path.join(os.getcwd(), 'data', 'toby-rgb.mp4')\n",
+    "video_path = os.path.join(os.getcwd(), 'attachment', 'sample-renamed.mp4')\n",
     "OUTPUT_PATH = os.path.join(os.getcwd(), 'data', 'toby-rgb-roi.mp4')\n",
     "detector = dlib.get_frontal_face_detector()\n",
     "\n",
-    "cap = cv2.VideoCapture(VID_PATH)\n",
+    "cap = cv2.VideoCapture(video_path)\n",
     "fps = 30\n",
     "\n",
     "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
@@ -621,20 +625,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waktu yang diperlukan: 0:00:16.059812\n"
+      "Waktu yang diperlukan: 0:00:46.588131\n"
      ]
     }
    ],
    "source": [
-    "VID_PATH = os.path.join(os.getcwd(), 'data', 'toby-rgb.mp4')\n",
-    "OUTPUT_PATH = os.path.join(os.getcwd(), 'data', 'toby-rgb-roi-tracking.mp4')\n",
+    "VID_PATH = os.path.join(os.getcwd(), 'attachment', 'sample-renamed.mp4')\n",
+    "OUTPUT_PATH = os.path.join(os.getcwd(), 'data', 'roi_tracking.mp4')\n",
     "detector = dlib.get_frontal_face_detector()\n",
     "\n",
     "cap = cv2.VideoCapture(VID_PATH)\n",
